# manostretch-davinchi-plugin

./: .gitignore  CMakeLists.txt  build.bat
.github/workflows/: build-release.yml
include/: GpuStretchPlugin.h
include/openfx/: ofxCore.h
src/: DistortionCPU.cpp  DistortionFX.h  GpuStretchPlugin.c  GpuStretchPlugin.cpp  Installer.cpp  ManoStretch.cpp  resource.h
src/gpu/: CudaKernel.cu  MetalKernel.mm  OpenCLKernel.cpp
